Migrate build to Java 18, Gradle 7.5